Remove some fixed UI elements dimensions and enforce portrait layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.android.kubernetesclient">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -10,20 +11,28 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PodsActivity" />
-        <activity android:name=".PodActivity" />
-        <activity android:name=".ServicesActivity" />
-        <activity android:name=".ServiceActivity" />
-        <activity android:name=".NodesActivity" />
-        <activity android:name=".NodeActivity"></activity>
+        <activity android:name=".PodsActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".PodActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ServicesActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ServiceActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".NodesActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".NodeActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
